lib_LTLIBRARIES = libcli++.la

libcli___la_SOURCES =     \
  environment.cc          \
  extern.cc               \
  feature.cc              \
  module.cc               \
  program.cc              \
  version.cc

base_pkgincludedir = $(includedir)/cli++

base_pkginclude_HEADERS = \
  environment.h           \
  extern.h                \
  feature.h               \
  module.h                \
  program.h               \
  version.h
