lib_LTLIBRARIES = libdrycli.la

libdrycli_la_SOURCES =    \
  environment.cc          \
  extern.cc               \
  feature.cc              \
  module.cc               \
  option.cc               \
  program.cc              \
  version.cc

base_pkgincludedir = $(includedir)/dry/cli

base_pkginclude_HEADERS = \
  arguments.h             \
  environment.h           \
  extern.h                \
  feature.h               \
  module.h                \
  option.h                \
  program.h               \
  version.h
